Working on Login Scenarios

--- a/src/pages/signin/signin.html
+++ b/src/pages/signin/signin.html
@@ -2,8 +2,8 @@
   <ion-list class="login-container">
     <h2 class="page-header">Sign In</h2>
     <ion-item>
-      <ion-label floating>Username</ion-label>
-      <ion-input type="text" #username></ion-input>
+      <ion-label floating>Email</ion-label>
+      <ion-input type="text" #email></ion-input>
     </ion-item>
     <ion-item>
       <ion-label floating>Password</ion-label>
