--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -10,8 +10,8 @@
       <ion-input type="email" value=""></ion-input>
     </ion-item> -->
     <ion-item>
-      <ion-label floating>Username</ion-label>
-      <ion-input type="text" #username></ion-input>
+      <ion-label floating>Email</ion-label>
+      <ion-input type="email" #email></ion-input>
     </ion-item>
     <ion-item>
       <ion-label floating>Password</ion-label>
