--- a/src/pages/signin/signin.html
+++ b/src/pages/signin/signin.html
@@ -10,7 +10,7 @@
       <ion-input type="password" #password></ion-input>
     </ion-item>
     <button ion-button block color="primary" (click)="signIn()">Submit</button>
-    <button class="back-to" (click)="forgotPassword()">Forgot Password ?</button>
+    <!-- <button class="back-to" (click)="forgotPassword()">Forgot Password ?</button> -->
     <button class="back-to" (click)="signUp()">Don't have account, Click here!</button>
   </ion-list>
 </ion-content>
