--- a/src/pages/notes/notes.html
+++ b/src/pages/notes/notes.html
@@ -15,14 +15,13 @@
   </ion-navbar>
 </ion-header>
 <ion-content padding>
-  
-	<ion-list>
+  <ion-list>
     <ion-item-sliding *ngFor="let note of notes | async">
       <ion-item>
         {{note.name}}
       </ion-item>
       <ion-item-options>
-        <button ion-button icon-only (click)="editNote(note.key)" light>
+        <button ion-button icon-only (click)="editNote(note)" light>
           <ion-icon name="paper"></ion-icon>
         </button>
         <button ion-button icon-only (click)="deleteNote(note.key)" danger>
@@ -31,5 +30,4 @@
       </ion-item-options>
     </ion-item-sliding>
   </ion-list>
-  
 </ion-content>
